src/test/resources/invalid/semanticErr/extra/otheredges/undefinedAssign.wacc
begin

bool b = x == y

end